--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
 
 "linksuporte":"https://wa.me/5547997286433",
 
+"texto9":"Ver Imagens",
+
+"texto10":"Imagem 1",
+
+"texto11":"Imagem 2",
+
+"texto12":"Imagem 3",
+
+"texto13":"Imagens",
+
+"texto14":"Carregando imagens...",
+
 "img4":"link"
 
 }
