--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
 
 "texto14":"Carregando imagens...",
 
+"texto15":"Correção ",
+
+"texto16":"Corrigir Falha ao Injetar",
+
+"texto17":"Em alguns celulares causava um erro ao tentar injetar o FFH4X, com essa opção será corrigido.",
+
+"texto18":"Corrigir Erro Desbanir Por ID",
+
+"texto19":"Em casos raros acontecia um error ao tentar desbanir em alguns Android, com essa nova opção você corrige o problema.",
+
+"texto20":"Corrigindo o problema...",
+
+"texto21":"Corrigido com sucesso, ative as opções novamente:)",
+
+"texto22":"Falhou ao corrigir o problema",
+
 "img4":"link"
 
 }
