--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 "texto17":"Em alguns celulares causava um erro ao tentar injetar o FFH4X, com essa opção será corrigido.",
 
-"texto18":"Corrigir Erro Desbanir Por ID",
+"texto18":"Corrigir Error Desbanir Por ID",
 
 "texto19":"Em casos raros acontecia um error ao tentar desbanir em alguns Android, com essa nova opção você corrige o problema.",
 
