--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
 "text11":"Verificando código vip...",
 
-"text12":"Dispositivo diferente do cadastro!",
+"text12":"Dispositivo diferente do cadastro.",
 
-"text13":"Esse Código vip não existe!",
+"text13":"Esse código não existe, insira um válido.",
 
 "text14":"Validade: Permanentemente",
 
