--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 "texto21":"Corrigido com sucesso, ative as opções novamente:)",
 
-"texto22":"Falhou ao corrigir o problema",
+"texto22":"Falhou ao corrigir o problema, tente novamente mais tarde!",
 
 "img4":"link"
 
