--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 "linkbuy":"https://jatodosmods.com",
 
-"textviewinsta":"Veja como está: ",
+"textviewinsta":"Bugs da versões anteriores foram corrigido nessa versão, confira no botão abaixo:",
 
 "textver":"",
 
