--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 "textbypass":"Bypass Ant Fechamentos",
 
-"textdesban":"Desbanir Contas Pelo ID",
+"textdesban":"Desbanir Contas Pelo ID (Corrigido na V23) sairá hoje",
 
 "linkpainel":"https://jatodosmods.com/minha-conta",
 
