--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 "text11":"Verificando código vip...",
 
-"text12":"Dispositivo diferente do cadastro.",
+"text12":"Versão desatualizada, por favor verifique o site.",
 
 "text13":"Esse código não existe, insira um válido.",
 
