--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 "text12":"Versão desatualizada, por favor verifique o site.",
 
-"text13":"Esse código não existe, insira um válido.",
+"text13":"Sua versão é desatualizada, instale o novo apk no site para desbloquear as funções com vídeo.",
 
 "text14":"Validade: Permanentemente",
 
